fixed overflow on journal compnenet. Also journal collapse is now functional and edit and delete buttons added to each entry.

--- a/src/components/Journal/style.css
+++ b/src/components/Journal/style.css
@@ -7,7 +7,7 @@
 
 #postArea{
     width:98%;
-    
+    height: 98%;
     margin: auto;
     overflow-y:auto;
     overflow-x: hidden;
